--- a/check_compliance.yml
+++ b/check_compliance.yml
@@ -87,8 +87,7 @@
 
   handlers:
     - name: create incident
-      local_action:
-        module: snow_record
+      snow_record:
         username: "{{ SN_USERNAME }}"
         password: "{{ SN_PASSWORD }}"
         instance: "{{ SN_INSTANCE }}"
@@ -102,4 +101,6 @@
           comments: "The system is out of compliance on {{ inventory_hostname }}"
       register: snow_var
       check_mode: no
+      become_user: awx 
+      delegate_to: localhost
         
