--- a/check_compliance.yml
+++ b/check_compliance.yml
@@ -10,7 +10,6 @@
             path: C:\windows
             state: directory
           register: windowsbase100
-          notify: create incident 
 
         - name: Safe DLL Search Mode is Enabled | windows-base-101
           win_regedit:
@@ -19,7 +18,6 @@
             data: "0"
             type: dword
           register: windowsbase101
-          notify: create incident 
 
         - name: Anonymous Access to Windows Shares and Named Pipes is Disallowed | windows-base-102
           win_regedit:
@@ -28,7 +26,6 @@
             data: "1"
             type: dword
           register: windowsbase102
-          notify: create incident 
 
         - name: All Shares are Configured to Prevent Anonymous Access | windows-base-103
           win_regedit:
@@ -37,7 +34,6 @@
             data: ""
             type: multistring
           register: windowsbase103
-          notify: create incident 
 
         - name: Force Encrypted Windows Network Passwords | windows-base-104
           win_regedit:
@@ -46,7 +42,6 @@
             data: "0"
             type: dword
           register: windowsbase104
-          notify: create incident 
 
         - name: Disable SMB1 to Windows Shares | windows-base-105
           win_regedit:
@@ -55,7 +50,6 @@
             data: "0"
             type: dword
           register: windowsbase105
-          notify: create incident 
 
         - name: Strong Windows NTLMv2 Authentication Enabled; Weak LM Disabled | windows-base-201
           win_regedit:
@@ -64,7 +58,6 @@
             data: "4"
             type: dword
           register: windowsbase201
-          notify: create incident 
 
         - name: Enable Strong Encryption for Windows Network Sessions on Clients | windows-base-202
           win_regedit:
@@ -73,7 +66,6 @@
             data: "537395200"
             type: dword
           register: windowsbase202
-          notify: create incident 
 
         - name: Enable Strong Encryption for Windows Network Sessions on Servers | windows-base-203
           win_regedit:
@@ -82,25 +74,33 @@
             data: "537395200"
             type: dword
           register: windowsbase203
-          notify: create incident 
-      
 
-  handlers:
-    - name: create incident
-      servicenow.servicenow.snow_record:
-        username: "{{ SN_USERNAME }}"
-        password: "{{ SN_PASSWORD }}"
-        instance: "{{ SN_INSTANCE }}"
-        state: present
-        table: incident
-        data:
-          short_description: "BANNER"
-          severity: 3
-          priority: 2
-          caller_id: "System Administrator"
-          comments: "The system is out of compliance on {{ inventory_hostname }}"
-      register: snow_var
-      check_mode: no
-      become_user: awx 
-      delegate_to: localhost
-        
+    - name: Create ServiceNow Incident 
+      block:  
+        - name: create incident
+          servicenow.servicenow.snow_record:
+            username: "{{ SN_USERNAME }}"
+            password: "{{ SN_PASSWORD }}"
+            instance: "{{ SN_INSTANCE }}"
+            state: present
+            table: incident
+            data:
+              short_description: "BANNER"
+              severity: 3
+              priority: 2
+              caller_id: "System Administrator"
+              comments: "The system is out of compliance on {{ inventory_hostname }}"
+          register: snow_var
+          check_mode: no
+          become_user: awx 
+          delegate_to: localhost
+      when: 
+        windowsbase100.changed or
+        windowsbase101.changed or
+        windowsbase102.changed or
+        windowsbase103.changed or
+        windowsbase104.changed or
+        windowsbase105.changed or
+        windowsbase201.changed or
+        windowsbase202.changed or
+        windowsbase203.changed
