guess and check debugging coming right up

--- a/check_compliance.yml
+++ b/check_compliance.yml
@@ -108,3 +108,51 @@
         windowsbase201.changed or
         windowsbase202.changed or
         windowsbase203.changed
+
+    - name: Update ServiceNow Incident 
+      block:  
+        - name: Mark incident as resolved
+          servicenow.servicenow.snow_record:
+            username: "{{ SN_USERNAME }}"
+            password: "{{ SN_PASSWORD }}"
+            instance: "{{ SN_INSTANCE }}"
+            state: present
+            table: incident
+            number: "{{ incident_num }}"
+            data:
+              state: 6
+              comments: "Compliance has been updated, marking resolved"
+          register: snow_var
+          check_mode: no
+          become_user: awx 
+          delegate_to: localhost
+
+        - name: Mark incident as closed 
+          servicenow.servicenow.snow_record:
+            username: "{{ SN_USERNAME }}"
+            password: "{{ SN_PASSWORD }}"
+            instance: "{{ SN_INSTANCE }}"
+            state: present
+            table: incident
+            number: "{{ incident_num }}"
+            data:
+              state: 7
+              comments: "Compliance has been updated, closing ticket"
+          register: snow_var
+          check_mode: no
+          become_user: awx 
+          delegate_to: localhost
+      tags: 
+        - never  
+        - fix
+      when: 
+        (windowsbase100.changed or
+        windowsbase101.changed or
+        windowsbase102.changed or
+        windowsbase103.changed or
+        windowsbase104.changed or
+        windowsbase105.changed or
+        windowsbase201.changed or
+        windowsbase202.changed or
+        windowsbase203.changed) and 
+        incident_num is defined
