add tag needed for fix

--- a/roles/snow-init/tasks/main.yml
+++ b/roles/snow-init/tasks/main.yml
@@ -193,6 +193,7 @@
     inventory: AWS
     project: "ServiceNow"
     playbook: check_compliance.yml
+    job_tags: fix
     credentials: 
       - "AWS Windows"
       - "SNOW"
