--- a/initialize.yml
+++ b/initialize.yml
@@ -15,8 +15,12 @@
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
       register: user
 
-    - name: Initialize Demo
+    - name: Setup ServiceNow custom credential 
       include_role:
-        name: snow-init 
+        name: snow-credential 
+
+    - name: Setup ServiceNow compliance closed loop demo
+      include_role:
+        name: snow-compliance
       vars:
         aws_user: "{{ user.user_id | regex_search(':(.*)', '\\1') | join('') }}"
